# ANN_KohonenNetwork

./: ANN.cpp  ANN.h  CMakeLists.txt  README.md  main.cpp
models/: KohonenNetwork.cpp  KohonenNetwork.h  KohonenNeuron.cpp  KohonenNeuron.h  MLP.cpp  MLP.h  MNIST.cpp  MNIST.h  neuralNet.cpp  neuralNet.h
